--- a/UFUA-Maps.html
+++ b/UFUA-Maps.html
@@ -1,3 +1,5 @@
+<head><link rel="stylesheet" type="text/css" href="UTUA-Stylesheet.css"></head>
+
 <center><header1><img width="120px" src="http://www.myiconfinder.com/uploads/iconsets/256-256-7ab6c25395f71e65019ad7d593fd18d5.png">　MAPS</center><br>
   <button><img width="35px" src="https://d30y9cdsu7xlg0.cloudfront.net/png/145697-200.png">&nbsp;&nbsp;Uni Floor Plans</button><br>
   <button><img width="35px" src="http://www.symbols.com/gi.php?type=1&id=330&i=1">&nbsp;&nbsp;Restaurants</button><br>
